# codeEater_solana

./: .pnp.cjs  Anchor.toml  Oggcoin_Progress_Report.docx  Oggcoin_Progress_Report.txt  Readme.md  SECURITY_AUDIT.md  deployment-info.json  metadata.json  package-lock.json  package.json  tsconfig.json
programs/calci/: Cargo.toml
programs/calci/src/: lib.rs
scripts/: attach-metadata.ts  create-token-with-metadata.ts  deploy-devnet.ts  verify-devnet.ts
tests/: calci.ts
